# interface_sdk-js

./: .gitignore  0001-Add-http-3-and-fix-codecheck-P12-keyPasswd.patch  0312_js.diff  16715.diff  @ohos.resourceschedule.WorkSchedulerExtensionAbility.d.ts  BUILD.gn  CODEOWNERS  OAT.xml  README.md  README_zh.md  api.diff  arkui_interop_copy_dynamic.sh  arkui_transformer.py  build_api_check_plugin.py  bundle.json  changes.diff  compile_ets_ts.json  compile_ets_ts.py  delete_arkui_label.py  delete_arkui_label.pydeps  diff.patch  edof.patch  exists_path.py  interface_config.gni  jsdoc.diff  ohos_copy_ets.py  process_internal.py  process_internal.pydeps  process_interop.py  process_label_noninterop.py  q  q.pub  remove_internal.py  remove_list.json  run_compile_declgen.py
.gitee/: PULL_REQUEST_TEMPLATE.md
api/:  @ohos.multimodalInput.pointer.d.ts  11  111  1111  @koalaui.arkts-arkui.Button.d.ets  @koalaui.arkts-arkui.Column.d.ets  @koalaui.arkts-arkui.Common.d.ets  @koalaui.arkts-arkui.StructBase.d.ets  @koalaui.arkts-arkui.Text.d.ets  @koalaui.arkts-arkui.UserView.d.ets  @ohos.EnterpriseAdminExtensionAbility.d.ts  @ohos.FloatingBall.ts  @ohos.FusionConnectivity.PartnerAgentExtensionAbility.d.ts  @ohos.FusionConnectivity.PartnerAgentExtensionContext.d.ts  @ohos.FusionConnectivity.partnerAgent.d.ts  @ohos.FusionConnectivity.ranging.d.ts  @ohos.InputMethodExtensionAbility.d.ets  @ohos.InputMethodExtensionAbility.d.ts  @ohos.InputMethodExtensionContext.d.ets  @ohos.InputMethodExtensionContext.d.ts  @ohos.InputMethodSubtype.d.ts  @ohos.PiPWindow.d.ets  @ohos.PiPWindow.d.ts  @ohos.PrintExtensionAbility.d.ts  @ohos.UiTest.d.ets  @ohos.UiTest.d.ts  @ohos.WallpaperExtensionAbility.d.ts  @ohos.WorkSchedulerExtensionAbility.d.ts  @ohos.ability.Ability.d.ts  @ohos.ability.ability.d.ets  @ohos.ability.ability.d.ts  @ohos.ability.abilityAgent.d.ts  @ohos.ability.continuationRegisterManager.d.ts  @ohos.ability.dataUriUtils.d.ts  @ohos.ability.errorCode.d.ts  @ohos.ability.featureAbility.d.ets  @ohos.ability.featureAbility.d.ts  @ohos.ability.formManager.d.ts  @ohos.ability.particleAbility.d.ets  @ohos.ability.particleAbility.d.ts  (+1255 more)
api/@internal/: global.d.ts
api/ability/: abilityResult.d.ets  abilityResult.d.ts  connectOptions.d.ets  connectOptions.d.ts  continuationExtraParams.d.ts  continuationResult.d.ts  continueAbilityOptions.d.ts  dataAbilityHelper.d.ets  dataAbilityHelper.d.ts  dataAbilityOperation.d.ets  dataAbilityOperation.d.ts  dataAbilityResult.d.ts  dataAbilityUtils.d.ts  startAbilityParameter.d.ets  startAbilityParameter.d.ts  uiExtensionCallback.d.ts  want.d.ets  want.d.ts
api/advertising/: advertisement.d.ts
api/app/: abilityDelegator.d.ts  abilityDelegatorArgs.d.ts  abilityMissionInfo.d.ts  abilityMonitor.d.ts  abilityinfo.d.ts  abilitymissioninfo.d.ts  activeProcessInfo.d.ts  activeServiceAbilityInfo.d.ts  appVersionInfo.d.ts  appprocessstate.ts  bundleinfo.d.ts  common.d.ts  context.d.ets  context.d.ts  elementname.d.ts  featureAbilityContext.d.ts  installresult.d.ts  moduleinfo.d.ts  processInfo.d.ets  processInfo.d.ts  shellCmdResult.d.ts  testRunner.d.ts  want.d.ts
api/application/: AbilityContext.d.ts  AbilityDelegator.d.ets  AbilityDelegator.d.ts  AbilityFirstFrameStateData.d.ets  AbilityFirstFrameStateData.d.ts  AbilityFirstFrameStateObserver.d.ets  AbilityFirstFrameStateObserver.d.ts  AbilityForegroundStateObserver.d.ets  AbilityForegroundStateObserver.d.ts  AbilityForegroundStateObserver.static.d.ets  AbilityMonitor.d.ets  AbilityMonitor.d.ts  AbilityRunningInfo.d.ts  AbilityStageContext.d.ets  AbilityStageContext.d.ts  AbilityStageMonitor.d.ets  AbilityStageMonitor.d.ts  AbilityStartCallback.d.ets  AbilityStartCallback.d.ts  AbilityStartCallback.static.d.ets  AbilityStateData.d.ets  AbilityStateData.d.ts  AccessibilityExtensionContext.d.ets  AccessibilityExtensionContext.d.ts  AgentCard.d.ts  AgentExtensionConnectCallback.d.ts  AgentExtensionContext.d.ts  AgentHostProxy.d.ts  AgentProxy.d.ts  AppForegroundStateObserver.d.ets  AppForegroundStateObserver.d.ts  AppForegroundStateObserver.static.d.ets  AppServiceExtensionContext.d.ts  AppStateData.d.ets  AppStateData.d.ts  ApplicationContext.d.ets  ApplicationContext.d.ts  ApplicationStateObserver.d.ets  ApplicationStateObserver.d.ts  ApplicationStateObserver.static.d.ets  (+108 more)
api/arkui/: AlphabetIndexerModifier.d.ets  AlphabetIndexerModifier.d.ts  (+265 more)
arkts/: @arkts.collections.d.ets  @arkts.collections.d.ts  @arkts.collections.static.d.ets  @arkts.lang.d.ets  @arkts.math.Decimal.d.ets  @arkts.util.locks.d.ets  @arkts.utils.d.ets  @arkts.utils.locks.d.ets
build-tools/: .eslintrc.json  .gitignore  adjust_api_annotation.js  checkApiVersion.js  declgen.js  delete_label_noninterop.js  delete_systemapi_plugin.js  delete_systemapi_plugin_dynamic.js  delete_systemapi_plugin_static.js  handleApiFiles.js  handleDynamicApiFiles.js  handleStaticApiFiles.js  handle_api_dynamic_delete.json  intToNumber.js  mdFiles.txt  package-lock.json  package.json  process_global_import.js  process_interop.js  process_label_noninterop.js  remove_declgen.json
kits/: @kit.AVSessionKit.d.ts  @kit.AbilityKit.d.ets  @kit.AbilityKit.d.ts  @kit.AccessibilityKit.d.ets  @kit.AccessibilityKit.d.ts  @kit.AdsKit.d.ts  @kit.ArkData.d.ets  @kit.ArkData.d.ts  @kit.ArkGraphics.d.ts  @kit.ArkGraphics2D.d.ts  @kit.ArkGraphics3D.d.ts  @kit.ArkTS.d.ets  @kit.ArkTS.d.ts  @kit.ArkUI.d.ets  @kit.ArkUI.d.ts  @kit.ArkUI.static.d.ets  @kit.ArkWeb.d.ts  @kit.AssetStoreKit.d.ts  @kit.AudioKit.d.ts  @kit.BackgroundTasksKit.d.ts  @kit.BasicServicesKit.d.ts  @kit.CalendarKit.d.ts  @kit.CameraKit.d.ts  @kit.ConnectivityKit.d.ts  @kit.ContactsKit.d.ts  @kit.CoreFileKit.d.ets  @kit.CoreFileKit.d.ts  @kit.CryptoArchitectureKit.d.ts  @kit.DataLossPreventionKit.d.ts  @kit.DataProtectionKit.d.ts  @kit.DeviceCertificateKit.d.ets  @kit.DeviceCertificateKit.d.ts  @kit.DistributedServiceKit.d.ts  @kit.DriverDevelopmentKit.d.ts  @kit.DrmKit.d.ts  @kit.FormKit.d.ts  @kit.IMEKit.d.ts  @kit.IPCKit.d.ts  @kit.ImageKit.d.ts  @kit.InputKit.d.ts  (+26 more)
zh-cn/: @ohos.configPolicy-cn.d.ts
(+4620 files in other folders)
